# JA-POLS

./: .gitignore  LICENSE  README.md  config.py
1_joint_alignment/: main_joint_alignment.py
1_joint_alignment/AFFINE/: AFFINE_global.py
1_joint_alignment/SE/: Edge.py  FC_by_SIFT.py  SE_alignment.py  data_provider.py  graph_manager.py
1_joint_alignment/SE/SE-Sync/C++/: CMakeLists.txt
1_joint_alignment/SE/SE-Sync/C++/SE-Sync/include/SESync/: RelativePoseMeasurement.h  SESync.h  SESyncProblem.h  SESync_types.h  SESync_utils.h  StiefelProduct.h
1_joint_alignment/SE/SE-Sync/C++/SE-Sync/include/Spectra/: SymEigsSolver.h
1_joint_alignment/SE/SE-Sync/C++/SE-Sync/include/Spectra/LinAlg/: TridiagEigen.h  UpperHessenbergQR.h
1_joint_alignment/SE/SE-Sync/C++/SE-Sync/include/Spectra/MatOp/: DenseSymMatProd.h  SparseSymMatProd.h
1_joint_alignment/SE/SE-Sync/C++/SE-Sync/include/Spectra/Util/: SimpleRandom.h  TypeTraits.h
1_joint_alignment/SE/SE-Sync/C++/SE-Sync/src/: SESync_utils.cpp  StiefelProduct.cpp
1_joint_alignment/STN/: ATN.py  STN_run.py
1_joint_alignment/STN/atn_helpers/: matrix_exp.py  network.py  (+2 more)
2_learning/: main_learning.py
2_learning/Alignment/: Alignment_learning.py  data.py  nets.py  train.py
2_learning/BG/: BG_learning.py  Piecewise_Subspace.py  Subspace_Computation.py  numpyctypes.py  rpca_candes_v1.py
3_bg_separation/: BG_Tool.py  data_provider.py  main_bg_separation.py
3_bg_separation/Prediction/: theta_prediction.py
3_bg_separation/Projection/: FC_by_SIFT.py
utils/: Plots.py  image_warping.py  video_to_frames.py
(+29 files in other folders)
